--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Go</title>
 </head>
 <body>
-    <h1>History of the world</h1>
+    <h1>History of the Colombia</h1>
+    <h2>New history</h2>
 </body>
 </html>
