--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>History of the Colombia</h1>
-    <h2>New history</h2>
+    <h2>Second history now</h2>
     <h3>Now,  this is the new line</h3>
+    <h4>Maybe the last history</h4>
 </body>
 </html>
