--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>Second history now</h2>
     <h3>Now,  this is the new line</h3>
     <h4>Maybe the last history</h4>
+    <p>Un parrafo sencillo</p>
 </body>
 </html>
