--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <h1>This is the new Post</h1>
+    <h1>This is the second Post</h1>
+    <p>Hello world!!!</p>
 </body>
 </html>
