--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="">Main</a></li>
+                <li><a href="">Our</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
+    </header>
+    
     <h1>This is the second Post</h1>
     <p>Hello world!!!</p>
 </body>
