structure of header

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,8 +16,12 @@
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
+
+        <div class="header2">
+            <h2>Here start the header</h2>
+        </div>
     </header>
-    
+
     <h1>This is the second Post</h1>
     <p>Hello world!!!</p>
 </body>
