end the header with some designs

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,8 @@
         </nav>
 
         <div class="header2">
-            <h2>Here start the header</h2>
+            <h2 class="header-2">Here start the header</h2>
+            <p>Now the blos is good</p>
         </div>
     </header>
 
