add some changes to blogpost, from master branch

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,5 +20,7 @@
     
     <h1>This is the second Post</h1>
     <p>Hello world!!!</p>
+    <h2>This is the post num 2</h2>
+    <p>So now we start a new commit to git</p>
 </body>
 </html>
