--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,7 @@
         </nav>
 
         <div class="header2">
-            <h2 class="header-2">Here start the titulo</h2>
+            <h2 class="header-2">Welcome!!!</h2>
             <p>Now the blos is good</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam rem quis nobis possimus eius reiciendis, non explicabo hic corrupti, asperiores soluta aut reprehenderit eos exercitationem voluptas sint commodi ipsam aspernatur.</p>
         </div>
